--- a/index.html
+++ b/index.html
@@ -2,13 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Midori Kocak</title>
+    <title>Adeta Bir Başkaldırış</title>
+    <style>
+        body {
+            margin: 0 auto;
+            max-width: 50em;
+            font-family: "Helvetica", "Arial", sans-serif;
+            line-height: 1.5;
+            padding: 4em 1em;
+            color: #555;
+            background-color: #ffc600;
+        }
+
+        h2 {
+            margin-top: 1em;
+            padding-top: 1em;
+        }
+
+        h1, h2, strong {
+            color: #333;
+        }
+    </style>
+
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body>
 <header>
-    <h1>Midori Kocak</h1>
-    <img src="img/image.png" width="150" alt="Midori Kocak"/>
+    <h1>Adeta Bir Başkaldırış</h1>
+    <img src="img/image.png" width="150" alt="Adeta Bir Başkaldırış"/>
     <nav>
         <ul>
             <li><a href="#summary">Summary</a></li>
@@ -26,79 +47,81 @@
                 Summary
             </h2>
             <p>
-                A <b>software engineer</b> with 10+ years experience in <i>web development</i> who loves to share her knowledge with people.
+                <b> Grafik tasarımcı</b> ve <b>illustrator.</b> Sipariş üzerine tablo yapıyorum. 
             </p>
         </section>
-        <section id="work">
-            <h2>Work</h2>
+        <section id="İş">
+            <h2>İş</h2>
             <ul>
-                <li>
-                    <strong >McKinsey &amp; Company</strong><br>
-                    <a href="http://mckinsey.com" itemprop="url">mckinsey.com</a><br>
-                    <small>Senior Software Engineer</small>
-                    <br>
-                    March 2018 - Present<br>
-                </li>
-
                 <li>
                     <strong >Freelancer</strong><br>
-                    <a href="http://github.com/midorikocak" itemprop="url">github.com/midorikocak</a><br>
-                    <small>Software Engineer</small>
+                    <a Herhangi bir firma </a><br>
+                    <small>Grafik Tasarım</small>
                     <br>
-                    September 2016 - February 2018<br>
+                  20  18 - Present<br>
                 </li>
                 <li>
-                    <strong >Massive Interactive</strong><br>
-                    <a href="http://massive.co" itemprop="url">massive.co</a><br>
-                    <small>Frontend Engineer</small>
+                    <strong >Freelancer</strong><br>
+                    <a İş Tecrübeleri </a><br>
+                    <small>Grafik Tasarım - Illustrator</small>
                     <br>
-                    August 2015 - August 2016<br>
+                     2016 -  2018<br>
+                </li>
+                <li>
+                    <strong >Freelancer</strong><br>
+                    <a Bir Dergi</a><br>
+                    <small>Grafik Tasarım - Illustrator</small>
+                    <br>
+                     2014 - 2016<br>
                 </li>
             </ul>
         </section>
-        <section id="education">
-            <h2>Education</h2>
+        <section id="Eğitim">
+            <h2>Eğitim</h2>
             <ul>
                 <li>
-                    <strong >Sabanci University</strong><br>
-                    <a href="http://sabanciuniv.edu" itemprop="url">sabanciuniv.edu</a><br>
-                    <small>Computer Science & Engineering</small>
+                    <strong > Üniversite</strong><br>
+                    <small> Grafik Tasarım </small>
                     <br>
-                    2006 - 2010<br>
+                     <br>
                 </li>
             </ul>
         </section>
-        <section id="languages">
-            <h2>Languages</h2>
+        <section id="Diller">
+            <h2>Diller</h2>
             <ul>
                 <li>
-                    Turkish - Native
+                    Turkish - Anadil
                 </li>
                 <li>
-                    English - Fluent
+                    English 
                 </li>
                 <li>
-                    Italian - Fluent
+                    Hintçe - Başlangıç
                 </li>
-                <li>
-                    Czech - Intermediate
-                </li>
-                <li>
-                    Japanese - Beginner
-                </li>
+                
             </ul>
         </section>
-        <section id="skills">
+        <section id="Beceriler">
             <h2>Skills</h2>
             <ol>
                 <li>
-                    PHP / MySQL
+                    Photoshop
                 </li>
                 <li>
-                    HTML / CSS
+                    İllustrator
                 </li>
                 <li>
-                    JavaScript (React / Vue / Elm)
+                    İndesign
+                </li>
+                <li>
+                    After Effects
+                </li>
+                <li>
+                    Corel Draw
+                </li>
+                <li>
+                    Microsoft Office
                 </li>
             </ol>
         </section>
@@ -108,14 +131,14 @@
     <h2>Social</h2>
     <nav>
         <ul>
-            <li><a href="http://linkedin.com/in/midorikocak">Linkedin</a></li>
+            <li><a a></li>
         </ul>
     </nav>
     <section id="contact">
         <h2>Contact</h2>
         <ul>
             <li>
-                <a href="mailto:mtkocak@gmail.com">E-mail</a>
+                <a E-mail</a>
             </li>
         </ul>
     </section>
