Revert "Update index.html"
This reverts commit e1cd40f70162ed89f9d2e66b13b749c66bbac8e5.

--- a/index.html
+++ b/index.html
@@ -2,34 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Adeta Bir Başkaldırış</title>
-    <style>
-        body {
-            margin: 0 auto;
-            max-width: 50em;
-            font-family: "Helvetica", "Arial", sans-serif;
-            line-height: 1.5;
-            padding: 4em 1em;
-            color: #555;
-            background-color: #ffc600;
-        }
-
-        h2 {
-            margin-top: 1em;
-            padding-top: 1em;
-        }
-
-        h1, h2, strong {
-            color: #333;
-        }
-    </style>
-
+    <title>Midori Kocak</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body>
 <header>
-    <h1>Adeta Bir Başkaldırış</h1>
-    <img src="img/image.png" width="150" alt="Adeta Bir Başkaldırış"/>
+    <h1>Midori Kocak</h1>
+    <img src="img/image.png" width="150" alt="Midori Kocak"/>
     <nav>
         <ul>
             <li><a href="#summary">Summary</a></li>
@@ -47,81 +26,79 @@
                 Summary
             </h2>
             <p>
-                <b> Grafik tasarımcı</b> ve <b>illustrator.</b> Sipariş üzerine tablo yapıyorum. 
+                A <b>software engineer</b> with 10+ years experience in <i>web development</i> who loves to share her knowledge with people.
             </p>
         </section>
-        <section id="İş">
-            <h2>İş</h2>
+        <section id="work">
+            <h2>Work</h2>
             <ul>
                 <li>
-                    <strong >Freelancer</strong><br>
-                    <a Herhangi bir firma </a><br>
-                    <small>Grafik Tasarım</small>
+                    <strong >McKinsey &amp; Company</strong><br>
+                    <a href="http://mckinsey.com" itemprop="url">mckinsey.com</a><br>
+                    <small>Senior Software Engineer</small>
                     <br>
-                  20  18 - Present<br>
+                    March 2018 - Present<br>
                 </li>
+
                 <li>
                     <strong >Freelancer</strong><br>
-                    <a İş Tecrübeleri </a><br>
-                    <small>Grafik Tasarım - Illustrator</small>
+                    <a href="http://github.com/midorikocak" itemprop="url">github.com/midorikocak</a><br>
+                    <small>Software Engineer</small>
                     <br>
-                     2016 -  2018<br>
+                    September 2016 - February 2018<br>
                 </li>
                 <li>
-                    <strong >Freelancer</strong><br>
-                    <a Bir Dergi</a><br>
-                    <small>Grafik Tasarım - Illustrator</small>
+                    <strong >Massive Interactive</strong><br>
+                    <a href="http://massive.co" itemprop="url">massive.co</a><br>
+                    <small>Frontend Engineer</small>
                     <br>
-                     2014 - 2016<br>
+                    August 2015 - August 2016<br>
                 </li>
             </ul>
         </section>
-        <section id="Eğitim">
-            <h2>Eğitim</h2>
+        <section id="education">
+            <h2>Education</h2>
             <ul>
                 <li>
-                    <strong > Üniversite</strong><br>
-                    <small> Grafik Tasarım </small>
+                    <strong >Sabanci University</strong><br>
+                    <a href="http://sabanciuniv.edu" itemprop="url">sabanciuniv.edu</a><br>
+                    <small>Computer Science & Engineering</small>
                     <br>
-                     <br>
+                    2006 - 2010<br>
                 </li>
             </ul>
         </section>
-        <section id="Diller">
-            <h2>Diller</h2>
+        <section id="languages">
+            <h2>Languages</h2>
             <ul>
                 <li>
-                    Turkish - Anadil
+                    Turkish - Native
                 </li>
                 <li>
-                    English 
+                    English - Fluent
                 </li>
                 <li>
-                    Hintçe - Başlangıç
+                    Italian - Fluent
                 </li>
-                
+                <li>
+                    Czech - Intermediate
+                </li>
+                <li>
+                    Japanese - Beginner
+                </li>
             </ul>
         </section>
-        <section id="Beceriler">
+        <section id="skills">
             <h2>Skills</h2>
             <ol>
                 <li>
-                    Photoshop
+                    PHP / MySQL
                 </li>
                 <li>
-                    İllustrator
+                    HTML / CSS
                 </li>
                 <li>
-                    İndesign
-                </li>
-                <li>
-                    After Effects
-                </li>
-                <li>
-                    Corel Draw
-                </li>
-                <li>
-                    Microsoft Office
+                    JavaScript (React / Vue / Elm)
                 </li>
             </ol>
         </section>
@@ -131,14 +108,14 @@
     <h2>Social</h2>
     <nav>
         <ul>
-            <li><a a></li>
+            <li><a href="http://linkedin.com/in/midorikocak">Linkedin</a></li>
         </ul>
     </nav>
     <section id="contact">
         <h2>Contact</h2>
         <ul>
             <li>
-                <a E-mail</a>
+                <a href="mailto:mtkocak@gmail.com">E-mail</a>
             </li>
         </ul>
     </section>
